HISTORY of collective.pwexpiry
==============================

0.10 (unreleased)
-----------------

- Nothing changed yet.


0.9.1 (2016-05-23)
------------------

- fix rst2html for pypi page [fRiSi]


0.9 (2016-05-23)
----------------

- Change the E-Mail Template to use a customizeable view.
  [pcdummy]

- Fix an encoding problem with usernames in notify_and_expire.
  [pcdummy]

- Fix javascripts with Plone 4.3.8, theres no more "ieversion()" function.
  [pcdummy]

- Fix translations for "password disabled" statusmessage
  (this fixes #11)
  [fRiSi]

- Update german translations.
  [pcdummy]

- Change the notification e-mail to a translated text e-mail.
  [pcdummy]

- Show status message "your account has expired" in login popup.
  [pcdummy]

- Update german translations.
  [pcdummy]

- Do not exipre passwords if `validity_period` is set to 0
  [fRiSi]

- Add password history check (not in last x passwords).
  [pcdummy]

- Enable the example_validator only when there is a browserlayer.
  [pcdummy]

- Add a skins layer and remove the confusing > 5 chars message from
  pwreset_form.
  [pcdummy]

- Update german translations and translate example_validator.
  [pcdummy]


0.8.1 (2015-05-06)
------------------

- Template typo
  [frapell]

- Update italian translation
  [giacomos]


0.8 (2015-04-20)
----------------

- Update translations
  [frapell]

- Improve control panel tool to allow admins to unlock accounts
  [frapell]


0.7 (2015-03-25)
----------------

- Ignore Managers from password expiring
  [frapell]

- Bugfix: If a wrong password was entered that goes over the limit, do not
  add a response header. Only do it when entering correctly
  [frapell]

- When comparing dates, make sure both are timezone aware
  [frapell]

- Ignore case when checking for name and username in password.
  [enfold-josh]

- Change script to accept a path and use traversal to get plone site since it
  may not always be in the application root.
  [enfold-josh]
