@@ -4,7 +4,8 @@ HISTORY of collective.pwexpiry
 0.10 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- Javascript for login popup is only needed for Plone 4
+  [frapell]
 
 
 0.9.1 (2016-05-23)
